--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,15 @@
 name: Cypress Tests
 
 on: [push]
+env:
+  SONGKICK_KEY: ${{ secrets.SONGKICK_KEY }}
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    env:
-      SONGKICK_API_KEY: ${{ secrets.SONGKICK_API_KEY }}
     steps:
+      - name: Print the env vars
+        run: echo The env var is- ${{ secrets.SONGKICK_KEY }}
       - name: Checkout
         uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
