--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.24.0",
     "cypress": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-webpack-plugin": "^3.0.1",
     "global": "^4.4.0",
     "mocha": "^9.1.3",
+    "moment": "^2.18.1",
     "next": "^11.1.2",
     "prettier": "2.4.1",
     "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^0.14||^15.5.4||^16.1.1",
+    "react-dom": "^0.14||^15.5.4||^16.1.1",
+    "react-with-direction": "^1.3.1",
     "sass": "^1.42.1"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.0.0",
     "eslint-config-next": "11.1.2",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
+    "postcss": "^8.3.11",
     "typescript": "4.4.3"
   },
   "lint-staged": {
