--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@types/react-dates": "^21.8.3",
     "axios": "^0.24.0",
     "cypress": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
