--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.0.0",
     "@types/react-dates": "^21.8.3",
     "axios": "^0.24.0",
+    "chai": "^4.3.4",
     "cypress": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-webpack-plugin": "^3.0.1",
