--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "2.4.1",
     "query-string": "^7.0.1",
     "react": "^0.14||^15.5.4||^16.1.1",
+    "react-dates": "^21.8.0",
     "react-dom": "^0.14||^15.5.4||^16.1.1",
     "react-with-direction": "^1.3.1",
     "sass": "^1.42.1"
