--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
+    "typeRoots": ["node_modules/@types"],
     "paths": {
       "@components/*": ["components/*"],
       "@styles/*": ["styles/*"],
-      "@types/*": ["types/*"],
       "@utils/*": ["utils/*"],
       "@context/*": ["context/*"],
       "@hooks/*": ["hooks/*"]
