--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@types/react-dates": "^21.8.3",
-    "@types/spotify-api": "^0.0.11",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
     "cypress": "^8.7.0",
@@ -31,8 +30,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^0.14||^15.5.4||^16.1.1",
     "react-with-direction": "^1.3.1",
-    "sass": "^1.42.1",
-    "spotify-web-api-node": "^5.0.2"
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
