--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@types/react-dates": "^21.8.3",
+    "@types/spotify-web-playback-sdk": "^0.1.12",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
+    "cookie": "^0.4.1",
     "cypress": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-webpack-plugin": "^3.0.1",
