--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@types/cookies": "^0.7.7",
     "@types/react-dates": "^21.8.3",
     "@types/spotify-web-playback-sdk": "^0.1.12",
     "axios": "^0.24.0",
