--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@types/cookies": "^0.7.7",
     "@types/react-dates": "^21.8.3",
+    "@types/spotify-web-playback-sdk": "^0.1.12",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
+    "cookies": "^0.8.0",
     "cypress": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-webpack-plugin": "^3.0.1",
