--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint-config-next": "11.1.2",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.4.3"
   },
   "lint-staged": {
