--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@material-tailwind/react": "0.3.4",
     "@types/cookies": "^0.7.7",
     "@types/react-dates": "^21.8.3",
     "@types/spotify-web-playback-sdk": "^0.1.12",
@@ -43,7 +44,8 @@
     "eslint-config-next": "11.1.2",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.4.3"
   },
   "lint-staged": {
