--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^0.14||^15.5.4||^16.1.1",
     "react-google-maps": "^9.4.5",
+    "react-query": "^3.34.19",
     "react-with-direction": "^1.3.1",
     "sass": "^1.42.1"
   },
